 you have the option of whether to save the scheduler state or not when exiting
 the program.
-The way the tag field is prefilled for new cards is changed. By default, the
 last used tag is used, regardless of card type. If you want the pre-2.2
 behaviour, where the last used tag is remembered per card type, there is a
 bundled plugin you can activate.
-Fix errors coming from loading config files (reported by knutflatland and
 many others).
-Ported missing import file formats from 1.x: SuperMemo7 text, SuperMemo from
 Palm, Cuecard WCU.
-Double-clicking on a saved set in 'Activate cards' now automatically selects
 the set and closes the window (requested by Michael Campbell).
-Add "Insert Flash" option (Note: Flash needs to be installed on your system
 for this to work) (requested by Gnome).
-Added support for video files under Windows (contrary to Linux, they will
 play in an external window using mplayer).
-When you have both tags "A" and "A::B", the card browser will now show the
 first tag as "A::Untagged".
-Javascript can now contain line breaks (reported by iBayer and gnome).
-In 'edit cards', make more robust of no longer warning about discarding
 changes if you did not make any.
-Sped up deleting of large number of cards from the card browser.
-When pasting into the "Add cards" or "Edit cards" dialog, respect the
 formatting of the card field.
-Be more robust against importing three-sided 1.x cards with missing
 information (reported by Chris Resnik).
-Bug fix involving notes with multiple lines with exporting cards.
-Fix bug with picture sometimes not showing when first starting the program.
-Better support for non-latin characters in sound files under Windows (reported
 by Raoul Pontecaille).
-Fix crash in 'Compact database' involving too many open files (reported by
 Pawel Szerszon).
-Fix situation where tag pane would be no longer visible after adding a first
 saved card set.
-Changing card types and deleting cards from the card browser is now faster.